Slightly more lenient validation, moved APP_ID and PAGE_ID to index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,12 @@
   <body>
     <div id="root"></div>
     <script src="%PUBLIC_URL%/fb-sdk.js"></script>
-    <script>window.FB = FB</script>
+    <script>
+      window.FB = FB
+      //RTD Notify app
+      window.APP_ID = 318910961855878;
+      //Notify2017 page
+      window.PAGE_ID = 1342876545800569;
+    </script>
   </body>
 </html>
